--- a/examples/streaming-service/layouts/base.liquid
+++ b/examples/streaming-service/layouts/base.liquid
@@ -1,22 +1,37 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block head %}
-    <title>My First Page</title>
+  <title>My First Page</title>
   {% endblock %}
   {% if NODE_ENV == "development" %}
     <script type="module" src="http://localhost:5173/@vite/client" defer></script>
     <script type="module" src="http://localhost:5173/src/index.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/55dc070dbb.js" crossorigin="anonymous"></script>
   {% else %}
-    <link rel="stylesheet" href="http://localhost:5173/src/index.css">
+  <link rel="stylesheet" href="http://localhost:5173/src/index.css">
     <script src="http://localhost:5173/src/main.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/55dc070dbb.js" crossorigin="anonymous"></script>
   {% endif %}
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
 </head>
 
 <body>
-  {% block content %}{% endblock %}
+
+{% block content %}{% endblock %}
+{% block nav %}
+<div class="navbar">
+  <a href="/" class="nav-item"><i class="fa-solid fa-house"></i> Home</a>
+  <a href="/catagory" class="nav-item"><i class="fa-solid fa-list"></i> Category</a>
+  <a href="#" class="nav-item"><i class="fa-solid fa-eye"></i> Watchlist</a>
+  <a href="#" class="nav-item"><i class="fa-solid fa-search"></i> Search</a>
+</div>
+
+{% endblock %}
 </body>
 </html>
