--- a/examples/streaming-service/src/index.css
+++ b/examples/streaming-service/src/index.css
@@ -10,9 +10,67 @@ body {
   color: #fff;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 1rem;
-  padding: 1rem;
+/*.grid {*/
+/*  display: grid;*/
+/*  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));*/
+/*  grid-gap: 1rem;*/
+/*  padding: 1rem;*/
+/*}*/
+
+.carousel {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  width: 100%;
+  scrollbar-width: none;
+  transition: 0.6s;
+
+  && ul {
+    display: flex;
+    gap:1em;
+  }
+  && li {
+    width:10em;
+    max-width: fit-content;
+    scroll-snap-align: start; /* Zorg ervoor dat items op de juiste positie scrollen */
+  }
 }
+
+
+
+
+/*Navbar*/
+.navbar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 4em;
+  display: flex;
+  justify-content: space-around;
+  background-color: #333; /* achtergrondkleur van de navbar */
+  color: white; /* tekstkleur van de navbar */
+  border-top-left-radius: 20px; /* Border-radius voor de bovenste linkerhoek */
+  border-top-right-radius: 20px; /* Border-radius voor de bovenste rechterhoek */
+}
+
+.nav-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+}
+
+.nav-item i {
+  margin-bottom: 10px; /* Ruimte tussen het icoon en de tekst */
+  margin-top: 10px; /* Ruimte tussen het icoon en de tekst */
+}
+
+.navbar > a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2em;
+}
+
+
+
