--- a/examples/streaming-service/src/typography.css
+++ b/examples/streaming-service/src/typography.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui, sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 400;
 }
 
@@ -22,4 +22,11 @@ dt {
   margin-right: 10px;
   font-weight: bold;
   text-align: right;
+}
+
+.divTitle {
+  font-size: clamp(1.5em, 4vw, 2.5em);
+  margin-inline-start: 2em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
