--- a/examples/streaming-service/src/index.css
+++ b/examples/streaming-service/src/index.css
@@ -17,24 +17,19 @@ body {
 /*  padding: 1rem;*/
 /*}*/
 
-.carousel {
-  display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  width: 100%;
-  scrollbar-width: none;
-  transition: 0.6s;
-
-  && ul {
+ ul.trendingMovies {
     display: flex;
-    gap:1em;
+    gap:6em;
+   row-gap: 1em;
+
+  flex-wrap: wrap;
+   && li {
+     width: 30em;
+   }
   }
-  && li {
-    width:10em;
-    max-width: fit-content;
-    scroll-snap-align: start; /* Zorg ervoor dat items op de juiste positie scrollen */
-  }
-}
+
+
+
 
 
 
@@ -66,11 +61,50 @@ body {
   margin-top: 10px; /* Ruimte tussen het icoon en de tekst */
 }
 
-.navbar > a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.2em;
+.navbar a {
+  color: white; /* standaard tekstkleur */
+  text-decoration: none; /* standaard geen onderstreping */
+  transition: color 0.3s; /* soepele overgang voor kleurverandering */
+}
+
+.navbar a:hover,
+.navbar a:focus {
+  color: #ffcc00; /* tekstkleur bij hover en focus */
 }
 
 
+.logo {
+  height: 100px;
+  width: 100px;
+  margin-top: -60px;
+  background-color: #333333;
+  border-radius: 50%;
+  padding: 15px;
 
+}
+
+.genre-poster {
+  width:100%;
+  height:50px;
+  background: #FF5252;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #FF5252 solid;
+  border-radius: 10px; /* Hier kun je de gewenste radiuswaarde instellen */
+  && h3 {
+    text-align: center;
+    color: white;
+  }
+}
+a.genre {
+  font-size: 1.3em;
+  text-decoration: none;
+}
+.genre-poster:hover {
+  background-color: #333333;
+  border-color: #333333;
+  && h3 {
+    color: #ffcc00;
+  }
+}
