--- a/examples/streaming-service/layouts/base.liquid
+++ b/examples/streaming-service/layouts/base.liquid
@@ -33,8 +33,8 @@
   <a href="/" class="nav-item"><i class="fa-solid fa-house"></i> Home</a>
   <a href="/catagory" class="nav-item"><i class="fa-solid fa-list"></i> Category</a>
   <img src="http://localhost:5173/img/logo.png" class="logo">
-  <a href="#" class="nav-item"><i class="fa-solid fa-eye"></i> Watchlist</a>
-  <a href="#" class="nav-item"><i class="fa-solid fa-search"></i> Search</a>
+  <a href="/watchlist" class="nav-item"><i class="fa-solid fa-eye"></i> Watchlist</a>
+  <a href="#" class="nav-item disabled"><i class="fa-solid fa-search "></i> Search</a>
 </div>
 
 {% endblock %}
