--- a/examples/streaming-service/components/poster/poster.css
+++ b/examples/streaming-service/components/poster/poster.css
@@ -26,7 +26,7 @@
 }
 .movie__info-description{
   display: flex;
-margin-top:20px;
+  margin-top:20px;
   color: white!important;
   height:50%;
   overflow: hidden;
@@ -39,4 +39,31 @@ margin-top:20px;
   width:25%;
   max-height: 100%;
   overflow:hidden;
+}
+
+.releasedate {
+  position: relative;
+  right:0.5em;
+
+}
+dd:first-of-type:before{
+  content: "🗓️";
+  margin-right: 1em;
+}
+dd:nth-of-type(2):before{
+  content: "⭐️";
+  margin-right: 1em;
+
+}
+dd{
+  font-size: 1.2em;
+  width:10em;
+}
+a {
+  text-decoration: none;
+  color: white;
+
+}
+a:hover {
+  color: white;
 }
