--- a/examples/streaming-service/components/poster/poster.liquid
+++ b/examples/streaming-service/components/poster/poster.liquid
@@ -9,10 +9,10 @@
   <section class="movie_info">
     <span class="poster__title">{% if movie.title %}{{ movie.title }}{% else %}{{ movie.name }}{% endif %}</span>
     <p class="movie__info-description">{{ movie.overview }}</p>
-    <dl>
-      <dt>Release date:</dt>
+    <dl class="releasedate">
+      <dt></dt>
       <dd>{{ movie.release_date }}</dd>
-      <dt>Rating:</dt>
+      <dt></dt>
       <dd>{{ movie.vote_average }}</dd>
     </dl>
   </section>
