--- a/examples/streaming-service/views/detail.css
+++ b/examples/streaming-service/views/detail.css
@@ -46,3 +46,40 @@
   text-align: left;
   margin-bottom: 20px;
 }
+
+#watchlist {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #FF5252;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 15px;
+}
+
+#watchlist:hover {
+  background-color: #ffcc00;
+}
+
+.alert {
+  position: fixed;
+  top: 20px; /* Aangepast naar 20px voor meer ruimte bovenaan het scherm */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #FF5252;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+
+
