--- a/examples/streaming-service/views/watchlist.liquid
+++ b/examples/streaming-service/views/watchlist.liquid
@@ -2,10 +2,9 @@
 
 {% block content %}
 <div class="container">
-  {% assign titel = genreId %}
-  <h2 class="divTitle">Category {{ titel }}</h2>
+  <h2 class="divTitle">Watchlist</h2>
   <ul class="trendingMovies">
-    {% for movie in trendingmovieData %}
+    {% for movie in movie %}
       <li>
         <a href="/movie/{{ movie.id }}">
           {% render 'components/poster/poster.liquid', movie: movie %}
@@ -13,6 +12,5 @@
       </li>
     {% endfor %}
   </ul>
-  </div>
+</div>
 {% endblock %}
-
